tests/semantic/simpexp_err1.mtp
(*Testing simple expression with string constant *)
const test := 'error';
var a, b : integer;

begin

	a := test + b div a - 3;


end.